Generate entities from JDL Model `sample`
See https://start.jhipster.tech/jdl-studio/#!/view/e9d789ee-4116-42c5-9b5c-016cad2ab5ce